fix: 更新 package.json 中的脚本命令格式，修复window下执行异常的问题并修正 vod-ai-outline-demo 中的签名生成逻辑

--- a/packages/vod-ai-outline-demo/index.html
+++ b/packages/vod-ai-outline-demo/index.html
@@ -276,7 +276,7 @@
 
         // 追加密钥并生成MD5
         const appSecret = "xxxx";
-        const stringToSign = queryString + appSecret;
+        const stringToSign = appSecret + queryString + appSecret;
         const signature = CryptoJS.MD5(stringToSign).toString().toUpperCase();
 
         return signature;
